stuck console to left side of page.  few weird css bugs to work out

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  background: #fff;
-  color: #333;
+  background: #191919;
+  color: #aaa;
   font: 300 100.1% "Helvetica Neue", Helvetica, "Arial Unicode MS", Arial, sans-serif;
   font-size:16px;
   margin: 0;
@@ -13,6 +13,7 @@ html,body {
   margin:0;
   padding:0;
   height:100%;
+  overflow: hidden;
 }
 h1 {
   font-weight: 400;
@@ -28,6 +29,9 @@ h1 {
   width: 100%;
   position:absolute;
 }
+#canvas b {
+  color: #ddd;
+}
 #text {
   position:absolute;
   top:20px;
@@ -35,7 +39,7 @@ h1 {
   width:100%;
   text-align:right;
 }
-#code, #console, #tutorial, #output_window {
+#code, #tutorial {
   height: 600px;
   width: 480px;
   margin: 0 0 20px 0;
@@ -49,8 +53,17 @@ h1 {
   font-size:16px;
   float:right;
 }
-#output_window b {
-  color: #ddd;
+#console {
+  background: #222;
+  color: #ffcf6f;
+  font-size:13px;
+  float: left;
+  position: relative;
+  text-align:left;
+  margin: 0;
+  padding: 0;
+  width: 320px;
+  display:none;
 }
 #tutorial {
   max-height: 600px;
@@ -66,14 +79,21 @@ h1 {
   padding: 4px 0;
 }
 #input {
+  height:120px;
+  width:100%;
   position:absolute;
-  bottom:8px;
-  width:474px;
-  height:70px;
-  font-size:16px;
+  bottom:0;
+  overflow:hidden;
+  font-size:13px;
+  background: #234;
+  color: #fdb;
+  border: none;
 }
 #output {
-  max-height:515px;
+  padding: 4px;
+  max-height: 515px;
+  position:absolute;
+  bottom:120px;
   overflow: auto;
 }
 .error {
